# server/index.js
@@ -1,14 +1,13 @@
+require('dotenv').config();
 const express = require('express');
 const bodyParser = require('body-parser');
-const hotelRoutes = require('./routes/hotels/hotelRoutes');
-const errorHandler = require('./middlewares/errorHandler');
+const hotelRoutes = require('./routes/hotelRoutes');
 
 const app = express();
-app.use(bodyParser.json());
-app.use('/api/hotels', hotelRoutes);
-app.use(errorHandler);
+app.use(bodyParser.json()); // Middleware to parse JSON bodies
+app.use('/api/hotels', hotelRoutes); 
 
-var server = app.listen(8080, () => {
+var server = app.listen(3000, () => {
   console.log('Server is running');
 });
 
